<resources>
    <string name="app_name">JuggerCo</string>
    <!-- Login -->
    <string name="campo_correo">Correo</string>
    <string name="campo_contraseña">Contraseña</string>
    <string name="campo_correo_helper">Ingresa tu correo</string>
    <string name="campo_contraseña_helper">Ingresa tu contraseña</string>
    <string name="boton_Sesion">Ingresar</string>
    <string name="recuperar_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="registrar_cuenta">¿No tienes una cuenta? Regístrate</string>
    <string name="regresar">Regresar</string>
    <!-- SignUp -->
    <string name="titulo_signUp">Crea una Cuenta</string>
    <string name="boton_Registro">Registrarse</string>
    <string name="ya_tengo_cuenta">Ya tengo una cuenta</string>
    <string name="campo_nombre">Nombre</string>
    <string name="campo_nombre_helper">Ingresa tu nombre</string>
    <!-- RecoveredPassword -->
    <string name="titulo_recovered_password">Recuperar Contraseña</string>
    <string name="boton_recovered">Recuperar</string>
    <string name="volver">Volver al inicio</string>
    <string name="notification_channel_group_general">General</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="selecciona_equipo">Selecciona equipo</string>
    <string name="admin">Admin</string>
    <string name="capitan">Capitan</string>
    <string name="player">Player</string>

</resources>