<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEBD6"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="649dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:textAlignment="center"
            android:id="@+id/titleSignIn"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationSignIn"
            android:layout_width="match_parent"
            android:layout_height="247dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/animation_home"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            app:helperText="@string/campo_correo_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditTextSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_correo"
                android:inputType="textWebEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paswordTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:helperText="@string/campo_contraseña_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditTextSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_contraseña"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/boton_Sesion" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textAlignment="center"
                android:id="@+id/recoverPasswordTextViewSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/recuperar_contraseña"
                android:textColor="@color/black"
                android:textColorHighlight="@color/primary"
                android:textSize="14sp"
                android:gravity="center_horizontal" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>